# open-bc280-firmware

./: .gitignore  AGENTS.md  README.md  beads_issues_run.sh  beads_parallel_run.sh  meson.build  patch_debug.txt  ui_display.h
.beads/: .gitignore  issues.jsonl
cross/: arm-none-eabi-clang.txt
docs/: BLE_UART_PROTOCOL.md  ida_hw_app_v2_2_8.txt  ida_hw_bootloader.txt
docs/chipset/: AT32F403AVCT7.md
docs/firmware/: OEM_ALIGNMENT.md  OEM_HW_MAP.md  OEM_INIT_ORDER_JH0_2.2.8.md  OEM_INIT_ORDER_V2.5.1.md  OEM_MOTOR_PROTOCOLS_V2.5.1.md  OEM_PIN_MAP_IDA_V2.5.1.md  OEM_RUNTIME_MAP_JH0_2.2.8.md  OEM_UI_NOTES.md  POWER_CONTROL_SPEC.md  README.md  REQUIREMENTS.md  SAFETY.md  UI_DESIGN_SYSTEM.md  UI_FEATURES.md  UI_SPEC.md  telemetry_protocol.md
docs/re/: oem_lcd_assets.md
drivers/: meson.build  spi_flash.c  spi_flash.h  st7789_8080.c  st7789_8080.h  uart.c  uart.h
firmware/: BC280_Combined_Firmware_3.3.6_4.2.5.bytes
gfx/: meson.build  ui_draw_common.c  ui_font.c  ui_font.h  ui_font_bitmap.c  ui_font_bitmap.h  ui_lcd.c  ui_lcd.h  ui_trig.c  ui_trig.h
libc/: arm_aeabi.c  libc_impl.c  meson.build  string.h
open-firmware/: CLEANUPWORK.md  POWER_CONTROL_SPEC.md  README.md  UI_SPEC.md  meson.build
open-firmware/cross/: arm-none-eabi-clang.txt
open-firmware/docs/: PHASE4_STATE_CONSOLIDATION_SUMMARY.md  REQUIREMENTS.md  SAFETY.md  UI_DESIGN_SYSTEM.md  UI_FEATURES.md  telemetry_protocol.md
open-firmware/drivers/: spi_flash.c  spi_flash.h  st7789_8080.c  st7789_8080.h  uart.c  uart.h
open-firmware/gfx/: meson.build  ui_color.h  ui_draw_common.h  ui_font.h  ui_font_bitmap.c  ui_font_bitmap.h  ui_font_stroke.c  ui_font_stroke.h  ui_lcd.c  ui_lcd.h
open-firmware/platform/: board_init.c  board_init.h  clock.c  clock.h  hw.h  meson.build  mmio.h  time.c  time.h
open-firmware/renode/: bc280_open_firmware.resc  bc280_open_firmware_fast.resc  bc280_platform.repl  bc280_platform_fast.repl  bc280_vendor.resc  bc280_vendor_fast.resc
open-firmware/scripts/: gen_screenshots.sh
open-firmware/src/: app.c  app.h  app_state.h  main.c  meson.build  system_control.h
open-firmware/startup/: link.ld  meson.build
open-firmware/storage/: ab_update.c  event_types.h  flash_util.h  layout.h  logs.c  logs.h  meson.build
open-firmware/tests/host/: host_sim_legacy  meson.build
open-firmware/tests/host/pixel/: ui_pixel_sink.c  ui_pixel_sink.h
open-firmware/tests/host/sim/: sim_bike.c  sim_ble.c  sim_ble.h  sim_main.c  sim_mcu.c  sim_mcu.h  sim_protocol.h  sim_shengyi.c  sim_shengyi.h  sim_shengyi_bus.c  sim_shengyi_bus.h  sim_shengyi_frame.c  sim_shengyi_motor.c  sim_shengyi_motor.h
open-firmware/tests/host/unit/: test_button_fsm.c  test_core.c  test_event_queue.c  test_shengyi_bus.c  test_ui_engineer.c
open-firmware/ui/: ui.c  ui.h  ui_grid.h  ui_layout.h  ui_state.c
open-firmware/util/: crc32.c  crc32.h  meson.build
platform/: board_init.c  board_init.h  cpu.h  early_init.c  early_init.h  hw.h  irq_dma.c  irq_dma.h  lcd_dma.c  lcd_dma.h  meson.build  mmio.h  stm32f1xx.h  time.c  time.h  uart_irq.c
renode/: bc280_open_firmware.resc  bc280_open_firmware_fast.resc  bc280_platform.repl  bc280_platform_fast.repl  bc280_vendor.resc  bc280_vendor_fast.resc
renode/peripherals/: adc1_stub.py  dma1_stub.py  gpioB_log_stub.py  gpioC_log_stub.py  gpioD_log_stub.py  gpioE_log_stub.py  gpioa_stub.py  iwdg_stub.py  lcd_cmd_stub.py  lcd_data_stub.py  spi1_flash_stub.py  spi2_flash_stub.py  spi_flash_stub_common.py  usart1_stub.py  usart2_stub.py  usart4_stub.py
scripts/: agent_work.sh  ble_button_probe.py  ble_dump_mem.py  ble_enter_bootloader.py  ble_listen_uart1.py  ble_motor_power_on.py  ble_push_open_firmware.py  build_open_firmware.sh  font_bitmap_gen.py  font_pack_tx02.py  gen_screenshots.sh  pack_ui_icons.py  parse_crash_dump.py  preflight_open_firmware.py  release_sign.py  renode_smoke.sh  uart_client.py  ui_screenshot.py
scripts/renode/: bootloader_ota.py  build_spi_flash_image.py  parse_uart_log.py  pyrenode_docker.Dockerfile  pyrenode_docker.sh  pyrenode_prep.py  pyrenode_smoke.py  test_ab_rollback.py  test_ab_update.py  test_adaptive_assist.py  test_assist_curve.py  test_ble_compat.py  test_ble_hacker_mode.py  test_ble_mitm.py  test_bootloader_recovery.py  test_brake_override.py  test_bus_capture.py  test_bus_inject_replay.py  test_bus_monitor_ui.py  test_config_blob.py  test_config_validation.py  test_crash_dump.py  test_cruise_control.py  test_cruise_resume.py  test_dashboard_ui.py  test_debug_state.py  test_event_log.py  test_fault_injection.py  test_full_update_flow.py  test_graph_mvp.py  (+32 more)
sdk/: meson.build
sdk/at32f403a_407/: at32f403a_407_conf.h
src/: app.c  app.h  app_state.h  boot_log.c  boot_log.h  boot_monitor.c  boot_monitor.h  boot_phase.h  main.c  meson.build  system_control.c  system_control.h
startup/: link_at32f403a.ld  meson.build  startup.c  startup_at32f403a.c
storage/: ab_update.c  ab_update.h  boot_stage.c  boot_stage.h  crash_dump.c  crash_dump.h  layout.h  meson.build
tests/host/: meson.build
tests/host/lcd_out/: host_lcd_0000.ppm  host_lcd_0001.ppm  host_lcd_0002.ppm  host_lcd_0003.ppm  host_lcd_0004.ppm  host_lcd_0006.ppm  host_lcd_0007.ppm  host_lcd_0008.ppm  host_lcd_0009.ppm  host_lcd_0010.ppm  host_lcd_0011.ppm  host_lcd_0012.ppm  host_lcd_0013.ppm  host_lcd_0014.ppm  host_lcd_0015.ppm  host_lcd_0016.ppm  host_lcd_0017.ppm  host_lcd_0018.ppm  host_lcd_0019.ppm  host_lcd_0022.ppm  host_lcd_0024.ppm  host_lcd_0025.ppm  host_lcd_0026.ppm  host_lcd_0027.ppm  host_lcd_0029.ppm  host_lcd_0030.ppm  host_lcd_0031.ppm
tests/host/pixel/: ui_pixel_sink.c  ui_pixel_sink.h
tests/host/sim/: sim_bike.h  sim_main.c  sim_mcu.c  sim_protocol.c  sim_shengyi_bus.c  sim_shengyi_bus.h  sim_shengyi_frame.c  sim_shengyi_frame.h  sim_shengyi_motor.c  sim_shengyi_motor.h  sim_uart.c  sim_uart.h
tests/host/unit/: test_ab_update.c  test_battery_soc.c  test_button_fsm.c  test_core.c  test_motor_stx02.c  test_scheduler.c  test_shengyi_bus.c  test_system_control.c  test_ui_engineer.c
ui/: meson.build  ui.c  ui.h  ui_state.h
util/: bool_to_u8.h  byteorder.h
(+216 files in other folders)
